Scheduler > Room items no longer wrap...

--- a/assets/less/bootstrap/scheduler.less
+++ b/assets/less/bootstrap/scheduler.less
@@ -90,6 +90,10 @@ header {
 		.crumb-dropdown-content {
 			overflow: auto;
 		}
+
+		/* .crumb-dropdown-content */ .room_item {
+			white-space: nowrap;
+		}
 	}
 
 /* } */
